# agent-bazaar-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  run_streamlit.py
.css/: app_styles.css
src/: .env  alembic.ini
src/app/: __init__.py
src/app/api/: dependencies.py
src/app/api/v1/: __init__.py  agents.py  login.py  logout.py  tasks.py  users.py
src/app/core/: __init__.py  config.py  port_manager.py  schemas.py  security.py  setup.py
src/app/core/exceptions/: http_exceptions.py
src/app/crud/: crud_agents.py  crud_users.py
src/app/models/: agent.py  user.py
src/app/schemas/: agent.py  user.py
src/app/streamlit/: __init__.py  config.yaml  main.py  streamlit_auth.py  styles.css
src/migrations/: env.py
src/migrations/versions/: 2024_10_29_1153-5cd47b57945b_initial_migration.py  6620af7d2b5b_remove_post_model.py  eccb9d5a7276_.py
src/scripts/: create_first_superuser.py
tests/: conftest.py  test_agents.py  test_user.py
tests/helpers/: generators.py
tutorials/: alembic.ipynb  arq_job_queues.ipynb  asyncio.ipynb  authentication.ipynb  couchbase_with_fastapi.ipynb  deploying_fastapi_on_azure.ipynb  docker_and_fastapi.ipynb  fast_crud_and_pydantic_schema.ipynb  kubernetes.ipynb  microservices_and_fastapi.ipynb  openai_and_fastapi.ipynb  postgres_with_fastapi.ipynb  rabbit_mq_and_kafka_vs_fastapi.ipynb  rate_limits.ipynb  redis.ipynb  sql_alchemy_with_fast_api.ipynb  tiers.ipynb
